Fix tratamientos bottom spacing

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ ul {
 
 .spad {
 	padding-top: 95px;
-	padding-bottom: 95px;
+	/* padding-bottom: 95px; */
 }
 
 .section-title {
